--- a/React+Flask/client/src/components/pages/HeroSection.css
+++ b/React+Flask/client/src/components/pages/HeroSection.css
@@ -31,3 +31,9 @@ img.home__hero-img-wrapper {
 p.home__hero-subtitle {
   margin-bottom: 1em;
 }
+@media screen and (max-width: 960px) {
+  .container {
+    margin-top: 0rem;
+    padding: 0em;
+  }
+}
